cmake_minimum_required(VERSION 3.10)
project(cats_cradle VERSION 0.1)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED True)
set(CMAKE_FIND_LIBRARY_SUFFIXES ".a")
set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++ -static")
#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
file(GLOB SOURCES "src/*.c")
add_executable(cats_cradle ${SOURCES})
target_include_directories(cats_cradle PUBLIC ${PROJECT_BINARY_DIR})
set(BUILD_SHARED_LIBS OFF)
add_subdirectory(./deps/raylib)
target_link_libraries(cats_cradle PRIVATE raylib)
if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    target_link_libraries(cats_cradle PRIVATE glfw m pthread)
elseif (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
    target_link_libraries(cats_cradle PRIVATE opengl32 gdi32)
endif()
file(COPY res/ DESTINATION ${EXECUTABLE_OUTPUT_PATH}/res)
